cfn-template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  This CloudFormation Template was written for running Kittens Carousel Static Website on EC2. Kittens Carousel Static Website will be deployed on Amazon Linux 2 (XXXXXXXXXXXX) EC2 Instance with custom security group which allows http connections on port 80 and ssh port 22 from anywhere. Kittens Carousel Static Website 
  is downloaded from my Public Github repository, then deployed on Apache Web Server. Rihanna says Work! Work! Work!

Parameters:
  #void
Ressources:
  WebServerSecurityGroups:
    Type: AWS::EC2::SecurityGroup
    Properties:
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp 
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
  WebServerInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0568773882d492fc8
      InstanceType: t2.micro
      KeyName: my_Key
      SecurityGroupsId:
      - !Ref WebServerSecurityGroups
      Tag:
      - Key: Name 
      - Value: Web_Server
      UserData:
        Fn::Base64:
          !Sub |
            #! /bin/bash
            yum update -y
            yum install httpd -y
            FOLDER="https://github.com/alassane1987/aws-project/Project-101-kittens-carousel-static-website-ec2/static-web"
            cd /var/www/html
            wget $FOLDER/index.html
            wget $FOLDER/cat0.jpg
            wget $FOLDER/cat1.jpg
            wget $FOLDER/cat2.jpg
            wget $FOLDER/cat3.png
            systemctl start httpd
            systemctl enable httpd

Outputs:
  WebsiteURL:
    Value:
    - !Sub ${PublicAddress}
    - PublicAddress: !GetAtt WebServerInstance.PublicDnsName
    Description: Kitten Caressoul web static
